# py-result

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
src/: __init__.py  result.py
src/result/: __init__.py  result.py
tests/: test_result.py
