[tool.poetry]
name = "py-result"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py_result"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-sugar = "^0.9.7"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0.0"
black = "^23.3.0"
commitizen = "^2.42.1"
isort = "^5.12.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
