[tool.poetry]
authors = ["William Osteimer Cardoso dos Anjos <wosteimer1@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
]
description = "A python implementation of the Result type, based on the rust language"
license = "MIT License"
name = "typing-result"
packages = [{include = "result", from = "src"}]
readme = "README.md"
version = "0.1.2"

[tool.poetry.urls]
github = "https://github.com/wosteimer/py-result"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.dependencies]
python = "^3.10"

[tool.taskipy.tasks]
cov = "coverage html"
lint = "black --check --diff . && isort --check --diff ."
test = "pytest -s -x --cov=src -vv"
test-watch = "ptw -- -s -x --cov=src -vv"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
commitizen = "^2.42.1"
isort = "^5.12.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.7"
pytest-watch = "^4.2.0"
taskipy = "^1.10.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
